@@ -14,9 +14,13 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.48 $ $Date: 2008-04-30 14:32:48 $ $Author: christian $
+# @version $Revision: 1.49 $ $Date: 2008-05-01 22:48:36 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2008-05-01  Christian Heller  <christian.heller@tuxtax.de>
+        * Fix bug in function "read_gnu_linux_console" where
+            only one character was read due to uncomplete loop
 
 2008-04-30  Christian Heller  <christian.heller@tuxtax.de>
         * Add new functions "set" and "set_character" automatically adjusting the destination's count and size
